--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -116,7 +116,7 @@
     <!-- TOOLBAR
     ================================================== -->
 
-    <div class="col-sm-3 col-md-3 toolbar">
+    <div class="col-xs-3 toolbar">
       
       <ul class="nav nav-toolbar">
         <li class="toolbar-heading">
@@ -176,7 +176,7 @@
         </li>
       </ul>
        
-    </div><!-- /.col-sm-2 -->
+    </div><!-- /.col-xs-3 -->
 
 
 {% endblock content%}
