--- a/docs/templates/document_distribute.html
+++ b/docs/templates/document_distribute.html
@@ -16,7 +16,7 @@
       {% for page in pages %}
         <img src="{{ MEDIA_URL }}{{ page.1 }}" class="zoomable" 
         id="page{{page.0}}" width=100% 
-        alt="A series of images showing the completed agenda. Accesibility note: Choose the PDF button on the sidebar to view the agenda in PDF format.">
+        alt="A series of images showing the completed {{ doc_type }}. Accesibility note: Choose the PDF button on the sidebar to view the agenda in PDF format.">
         <br/>
         <br/>
       {% endfor %}
@@ -35,11 +35,11 @@
       <ul class="nav nav-toolbar">
         <li class="toolbar-heading">
           <h1><i class="fa fa-check-circle fa-fw fa-lg"></i>&nbsp;
-            Review and send agenda</h1>
+            Review and send {{ doc_type }}</h1>
         </li>
         <li class="toolbar-subheading">
           <h2><i class="fa fa-compass fa-fw fa-lg"></i>&nbsp;
-            Navigation toolbar</h2>
+            Navigation</h2>
         </li>
         {% for page in pages %}
           <li id="sidebar_{{page.o}}">
@@ -54,7 +54,7 @@
       <ul class="nav nav-toolbar">
        <li class="toolbar-subheading">
          <h2><i class="fa fa-rocket fa-fw fa-lg"></i>&nbsp;
-           Actions toolbar</h2>
+           Actions</h2>
         </li>
       </ul>
       <ul class="nav nav-toolbar">
@@ -73,10 +73,15 @@
           </button>
         </li>        
         <li>
-          <a href={% url 'agenda-edit' meeting_id %} type="button" 
-            class="btn btn-toolbar">
-              <i class="fa fa-edit fa-fw"></i>&nbsp;
-              Make changes
+          {% if doc_type == 'agenda' %}
+            <a href={% url 'agenda-edit' meeting_id %} type="button" 
+              class="btn btn-toolbar">
+          {% elif doc_type == 'minutes' %}
+            <a href={% url 'minutes-edit' meeting_id %} type="button" 
+              class="btn btn-toolbar">
+          {% endif %}
+            <i class="fa fa-edit fa-fw"></i>&nbsp;
+            Make changes
           </a>
         </li>
         <li>
@@ -86,17 +91,22 @@
           </a>
         </li>
         <li>
-          <a href={% url 'agenda-print' meeting_id %} type="button"
-            class="btn btn-toolbar">
-              <i class="fa fa-file-text fa-fw"></i>&nbsp;
-              Open in PDF format
+          {% if doc_type == 'agenda' %}
+            <a href={% url 'agenda-print' meeting_id %} type="button"
+              class="btn btn-toolbar">
+          {% elif doc_type == 'minutes' %}
+            <a href={% url 'minutes-print' meeting_id %} type="button"
+              class="btn btn-toolbar">
+          {% endif %}
+            <i class="fa fa-file-text fa-fw"></i>&nbsp;
+            Open in PDF format
           </a>
         </li>
       </ul>
       <ul class="nav nav-toolbar">
        <li class="toolbar-subheading">
          <h2><i class="fa fa-share-square fa-fw fa-lg"></i>&nbsp;
-           Send agenda</h2>
+           Send {{ doc_type }}</h2>
         </li>
       </ul>
       <ul class="nav nav-toolbar">
@@ -122,7 +132,7 @@
     <div class="modal fade" id="distribute_to_selected_modal" tabindex="-1"
          role="dialog" aria-labelledby="DistributeToSelected"
          aria-hidden="true" 
-         aria-describedby="A pop-up to confirm sending the document">
+         aria-describedby="A pop-up to confirm sending the {{ doc_type }}">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-header">
@@ -133,7 +143,7 @@
           <form action="" method="POST">
             {% csrf_token %}
             <div class="modal-body">
-              Choose the participants to send the document to:
+              Choose the participants to send the {{ doc_type }} to:
               {% for participant in participants %}
                 <div class="checkbox">
                   <label>
@@ -164,7 +174,7 @@
     <div class="modal fade" id="distribute_to_all_modal" tabindex="-1"
          role="dialog" aria-labelledby="DistributeToAll"
          aria-hidden="true" 
-         aria-describedby="A pop-up to confirm sending the document">
+         aria-describedby="A pop-up to confirm sending the {{ doc_type }}">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-header">
@@ -173,7 +183,7 @@
             </h4>
           </div><!-- /.modal-header -->
           <div class="modal-body">
-            The document will be distributed to all participants in the group.
+            The {{ doc_type }} will be distributed to all participants in the group.
           </div><!-- /.modal-body -->
           <div class="modal-footer">
             <form action="" method="POST">
