Set up document_edit.html to be shared between agendas and minutes

--- a/docs/templates/minutes_edit_ajax_sidebar.html
+++ b/docs/templates/minutes_edit_ajax_sidebar.html
@@ -1,11 +1,11 @@
 {% load setclass %}
 
-<ul class="nav nav-sidebar">
+<ul class="nav nav-toolbar">
   {% for item in item_formlist %}
     <li id="sidebar_{{ item.item_no.value}}">
-      <a href="#id_{{ item.item_no.value}}-title" class="sidebar-heading tltip"
-         data-toggle="tooltip" title="Scroll to this item">
+      <a href="#id_{{ item.item_no.value}}-title" class="sidebar-heading">
         <div>
+          <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
           Item&nbsp;{{ item.item_no.value}}.&nbsp;&nbsp;
             <span id="sidebar_heading_{{ item.item_no.value}}">
               {{ item.title.value }}
