Set automatic scrolling to work properly across all views

--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -21,7 +21,7 @@
 
 {% for item in item_formlist %}
 
-  <div class="panel panel-primary">
+  <div class="panel panel-primary" id="panel_{{ item.item_no.value}}">
     
     <div class="panel-heading">
       Item {{ item.item_no.value }}
