--- a/docs/templates/agenda_edit_ajax_sidebar.html
+++ b/docs/templates/agenda_edit_ajax_sidebar.html
@@ -3,7 +3,7 @@
 <ul class="nav nav-toolbar sortable">
   {% for item in items %}
     <li id="sidebar_{{ item.item_no}}">
-      <a href="#id_i{{ item.item_no}}-title" class="sidebar-heading tltip"
+      <a href="#panel_{{ item.item_no}}" class="sidebar-heading tltip"
          data-toggle="tooltip" title="Drag items to re-order">
         <div>
           <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
