--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -7,8 +7,8 @@
   <h1>{{ group.name }}</h1>
 </div>
 
-<div class="col-md-4">
-  <div class="panel panel-primary">
+<div class="col-md-6">
+  <div class="panel panel-default">
     <div class="panel-heading">
       Time since last meeting<br/>
     </div>
@@ -26,8 +26,8 @@
   </div>  
 </div>
 
-<div class="col-md-4">
-  <div class="panel panel-primary">
+<div class="col-md-6">
+  <div class="panel panel-default">
     <div class="panel-heading">
 	  Last meeting
     </div>
@@ -55,7 +55,7 @@
   </div>  
 </div>
 
-<div class="col-md-4">
+<div class="col-md-6">
   <div class="panel panel-primary">
     <div class="panel-heading">
 	  Next meeting
@@ -120,7 +120,7 @@
 </div>
 
 <div class="col-md-6">
-  <div class="panel panel-primary">
+  <div class="panel panel-default">
     <div class="panel-heading">
 	  Tasks due soon
     </div>
