Re-organised and re-styled dashboard

--- a/docs/templates/document_sent.html
+++ b/docs/templates/document_sent.html
@@ -12,7 +12,7 @@
 
   <div class="panel panel-primary">
     <div class="panel-heading">
-      {{ doc_type|capfirst }} sent!
+      Success!
     </div>
     <div class="panel-body">
       {{ confirmation_text }}
