--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -3,171 +3,222 @@
 {% block content %}
 
 
-<div class="page-header">
+<div class="well-sm" id="dashboard-header">
   <h1>{{ group.name }}</h1>
 </div>
 
-<div class="col-md-6">
-  <div class="panel panel-default">
+<div class="col-sm-6">
+  <div class="panel panel-primary panel-dashboard">
+    <a href={% url 'task-list' %}>
+      <div class="panel-heading">
+	    <i class="fa fa-list fa-fw"></i>&nbsp;
+	    Most overdue tasks
+	    <i class="fa fa-arrow-circle-right pull-right"></i>
+      </div>
+      </a>
+      {% if top_overdue_tasks %}
+      <div class="table-dashboard">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            {% for heading in task_headings %}
+              <th>{{ heading }}</th>
+            {% endfor%}
+          </tr>
+        </thead>
+        <tbody> 
+          {% for task in top_overdue_tasks %}
+            <tr id={{ task.id }} 
+              onclick="document.location='{% url 'task-edit' task.id %}';">
+              <td>{{ task.description }}</td>
+              <td>{{ task.deadline }}</td>
+            </tr>
+          {% endfor%}
+        </tbody>
+      </table>
+      </div>
+      {% else %}
+      <div class="panel-body text-center">
+        <br/><br/>
+        <p>There are no tasks overdue.<br/>Nice work!<p/>
+      </div>
+      {% endif%}
+    </a>
+  </div>  
+</div>
+
+<div class="col-sm-6">
+  <div class="panel panel-default panel-dashboard">
+    <a href={% url 'meeting-list-current' %}>
+      <div class="panel-heading">
+	    <i class="fa fa-comments fa-fw"></i>&nbsp;
+	    Last meeting
+	    <i class="fa fa-arrow-circle-right pull-right"></i>
+      </div>
+    </a>
+    <div class="panel-body">
+      {% if last_meeting %}
+        <table class="meeting-table"> 
+           <tr>
+             <td>Number</td>
+             <td>{{ last_meeting.meeting_no }}</td>
+           </tr>
+           <tr>
+             <td>Date</td>
+             <td>{{ last_meeting.date_scheduled }}</td>
+           </tr>
+           <tr>
+             <td>Type</td>
+             <td>{{ last_meeting.meeting_type }}</td>
+            </tr>
+           <tr>
+             <td>Minutes</td>
+             {% if last_meeting.current_minutes_version %}
+               <td>Sent</td>
+             {% else %}
+               <td>Not yet sent out</td>
+             {% endif %}
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+        </table>
+      {% else %}
+        <br/><br/>
+        <p class="text-center">
+          The box will be empty until eConvenor has more data.
+        <p/>
+      {% endif%}
+    </div>  
+  </div>  
+</div>
+
+<div class="col-sm-6">
+  <div class="panel panel-primary panel-dashboard">
+    <a href={% url 'meeting-list-current' %}>
+      <div class="panel-heading">
+	    <i class="fa fa-comments fa-fw"></i>&nbsp;
+        Next meeting
+	    <i class="fa fa-arrow-circle-right pull-right"></i>
+      </div>
+    </a>
+    <div class="panel-body">
+      {% if next_meeting %}
+        <table class="meeting-table"> 
+           <tr>
+             <td>Number</td>
+             <td>{{ next_meeting.meeting_no }}</td>
+           </tr>
+           <tr>
+             <td>Date</td>
+             <td>{{ next_meeting.date_scheduled }}</td>
+           </tr>
+           <tr>
+             <td>Type</td>
+             <td>{{ next_meeting.meeting_type }}</td>
+            </tr>
+           <tr>
+             <td>Minutes</td>
+             {% if next_meeting.current_agenda_version %}
+               <td>Sent</td>
+             {% else %}
+               <td>Not yet sent out</td>
+             {% endif %}
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+        </table>
+      {% else %}
+        <br/><br/>
+        <p class="text-center">
+          The box will be empty until eConvenor has more data.
+        <p/>
+      {% endif%}
+    </div>
+  </div>  
+</div>  
+
+<div class="col-sm-6">
+  <div class="panel panel-default panel-dashboard">
+    <a href={% url 'task-list' %}>
+      <div class="panel-heading">
+	    <i class="fa fa-list fa-fw"></i>&nbsp;
+	    Tasks due soon
+	    <i class="fa fa-arrow-circle-right pull-right"></i>
+      </div>
+    </a>
+    {% if top_pending_tasks %}
+    <div class="table-dashboard">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            {% for heading in task_headings %}
+              <th>{{ heading }}</th>
+            {% endfor%}
+          </tr>
+        </thead>
+        <tbody> 
+          {% for task in top_pending_tasks %}
+            <tr id={{ task.id }} 
+                onclick="document.location='{% url 'task-edit' task.id %}';">
+              <td>{{ task.description }}</td>
+              <td>{{ task.deadline }}</td>
+            </tr>
+          {% endfor%}
+        </tbody>
+      </table>
+    </div>
+    {% else %}
+      <div class="panel-body text-center">
+        <br/><br/><p>There are no tasks due soon.<br/>Click 
+          the heading of this box to create some.<p/>
+      </div>
+    {% endif%}
+  </div>  
+</div>
+
+<div class="col-sm-6">
+  <div class="panel panel-default panel-dashboard">
     <div class="panel-heading">
+	  <i class="fa fa-exclamation-triangle fa-fw"></i>&nbsp;
+	  eConvenor feature updates
+    </div>
+    <div class="panel-body text-center">
+      <br/><br/>
+      <p>eConvenor's Beta version goes live on April 2nd!</p>
+    </div>
+  </div>  
+</div>
+
+
+<div class="col-sm-6">
+  <div class="panel panel-default panel-dashboard">
+    <div class="panel-heading">
+	  <i class="fa fa-calendar fa-fw"></i>&nbsp;
       Time since last meeting<br/>
     </div>
-    <div class="panel-body">
+    <div class="panel-body text-center">
+      <br/>
       {% if days_since_last_meeting %}
         <span class="feature-text">
-         {{ days_since_last_meeting }} days<br/><br/>
+          {% if days_since_last_meeting == 1 %}
+            1 day
+          {% elif days_since_last_meeting != 1 %}
+            {{ days_since_last_meeting }} days
+          {% endif %}
         </span>
       {% else %}
         <br/><br/>
-        <p>This box will be empty until eConvenor has more data.</p>
-        <br/><br/>
+        <p class="text-center">
+          The box will be empty until eConvenor has more data.
+        <p/>
       {% endif %}    
     </div>
   </div>  
 </div>
-
-<div class="col-md-6">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-	  Last meeting
-    </div>
-    <div class="panel-body">
-      {% if last_meeting %}
-        Number: {{ last_meeting.meeting_no }}<br/>
-        Date: {{ last_meeting.date_scheduled }}<br/>
-        Type: {{ last_meeting.meeting_type }}<br/>
-        {% if last_meeting.current_minutes_version %}
-          Minutes: Sent<br/>
-        {% else %}
-          Minutes: Not yet sent out<br/>
-        {% endif %}
-      {% else %}
-        <br/>
-        <p>The box will be empty until eConvenor has more data.<p/>
-        <br/>
-      {% endif%}
-    </div>
-    <a href={% url 'meeting-list-current' %}>
-      <button type="button" class="btn btn-default">
-        Go to current meetings
-      </button>
-    </a>
-  </div>  
-</div>
-
-<div class="col-md-6">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-	  Next meeting
-    </div>
-    <div class="panel-body">
-      {% if next_meeting %}
-        Number: {{ next_meeting.meeting_no }}<br/>
-        Date: {{ next_meeting.date_scheduled }}<br/>
-        Type: {{ next_meeting.meeting_type }}<br/>
-        {% if next_meeting.current_agenda_version %}
-          Agenda: Sent<br/>
-        {% else %}
-          Agenda: Not yet sent out<br/>
-        {% endif %}
-      {% else %}
-        <p>The box will be empty until eConvenor has more data.<p/>
-      {% endif%}
-    </div>
-    <a href={% url 'meeting-list-current' %}>
-      <button type="button" class="btn btn-default">
-        Go to current meetings
-      </button>
-    </a>
-  </div>  
-</div>  
-
-<div class="col-md-6">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-	  Most overdue tasks
-    </div>
-    {% if top_overdue_tasks %}
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          {% for heading in task_headings %}
-            <th>{{ heading }}</th>
-          {% endfor%}
-        </tr>
-      </thead>
-      <tbody> 
-        {% for task in top_overdue_tasks %}
-          <tr id={{ task.id }} 
-              onclick="document.location='{% url 'task-edit' task.id %}';">
-            <td>{{ task.description }}</td>
-            <td>{{ task.deadline }}</td>
-          </tr>
-        {% endfor%}
-      </tbody>
-    </table>
-    {% else %}
-      <div class="panel-body">
-        <p>There are no overdue tasks at the moment. Good going!<p/>
-      </div>
-    {% endif%}    
-    <a href={% url 'task-list' %}>
-      <button type="button" class="btn btn-default">
-        Go to tasks
-      </button>
-    </a>
-  </div>  
-</div>
-
-<div class="col-md-6">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-	  Tasks due soon
-    </div>
-    {% if top_pending_tasks %}
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          {% for heading in task_headings %}
-            <th>{{ heading }}</th>
-          {% endfor%}
-        </tr>
-      </thead>
-      <tbody> 
-        {% for task in top_pending_tasks %}
-          <tr id={{ task.id }} 
-              onclick="document.location='{% url 'task-edit' task.id %}';">
-            <td>{{ task.description }}</td>
-            <td>{{ task.deadline }}</td>
-          </tr>
-        {% endfor%}
-      </tbody>
-    </table>
-    {% else %}
-      <div class="panel-body">
-        <p>There are no tasks due soon. Click 
-          the button below to create some!<p/>
-      </div>
-    {% endif%}
-    <a href={% url 'task-list' %}>
-      <button type="button" class="btn btn-default">
-        Go to tasks
-      </button>
-    </a>
-  </div>  
-</div>
-
-<div class="col-md-6">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-	  eConvenor feature updates
-    </div>
-    <div class="panel-body">
-      eConvenor's Beta version goes live on April 2nd!
-    </div>
-  </div>  
-</div>
-
 
 
 {% endblock %}
