--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -119,7 +119,7 @@
              <td>{{ next_meeting.meeting_type }}</td>
             </tr>
            <tr>
-             <td>Minutes</td>
+             <td>Agenda</td>
              {% if next_meeting.current_agenda_version %}
                <td>Sent</td>
              {% else %}
@@ -192,7 +192,6 @@
     </div>
   </div>  
 </div>
-
 
 <div class="col-sm-6">
   <div class="panel panel-default panel-dashboard">
