--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -30,9 +30,11 @@ h2 {
   line-height: 1.1;
 }
 
-.error {
+label.error {
+  margin-top: 6px;
   color: #ff0066;
   border-color: #ff0066;
+  font-weight: normal;
 }
 
 .feature-text {
@@ -177,7 +179,7 @@ body {
 
 .nav-sidebar .nav-second-level .active a {
   color: #ffffff;
-  background-color: #444444;
+  background-color: #555555;
 }
 
 
@@ -232,6 +234,11 @@ body {
   background-color: #444444;
 }
 
+.nav-toolbar li.active button {
+  color: #ffffff;
+  background-color: #555555;
+}
+
 .btn-toolbar,
 .btn-toolbar:focus,
 .nav-toolbar > li > a.btn-toolbar,
@@ -252,11 +259,16 @@ body {
 }
 
 
+
 /* BUTTONS
 -------------------------------------------------- */
 
 .btn {
   border-radius: 0px;
+}
+
+.btn + .btn {
+  margin-left: 5px;
 }
 
 /* Primary button */
@@ -434,27 +446,11 @@ tbody tr:hover {
 }
 
 
-/* SPACERS
--------------------------------------------------- */
-
-.top-spacer {
-  height: 30px;
-}
-
-.top-spacer-large {
-  height: 40px;
-}
-
-.bottom-spacer {
-  height: 500px;
-}
-
-
 /* FORMS
 -------------------------------------------------- */
 
 .form-control {
-  height: 30px;
+  height: 32px;
   background-color: #cccccc;
   border: 1px solid #999999;
   border-radius: 0px;
@@ -463,8 +459,12 @@ tbody tr:hover {
 .form-control:focus {
   border-color: #ff0066;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, , 102, .4);
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 0, 102, .4);
+  -webkit-box-shadow: inset 0 0 0 rgba(255,0,102,0), 0 0 0 rgba(255, , 102, .4);
+          box-shadow: inset 0 0 0 rgba(255,0,102,0), 0 0 0 rgba(255, 0, 102, .4);
+}
+
+.form-group > label {
+  font-weight: normal;
 }
 
 .field-short {
@@ -476,18 +476,27 @@ tbody tr:hover {
 }
 
 
-/* MAIN WINDOW
+/* SPACING
 -------------------------------------------------- */
 
-.main {
-  padding-top: 10px;
+.with-toolbar {
+  padding-top: 40px;
+}
+
+.no-toolbar {
+  padding-top: 30px;
 }
 
 @media (min-width: 768px) {
-  .main {
+  .with-toolbar {
     padding-right: 20px;
     padding-left: 20px;
+    padding-bottom: 500px
   }
+}
+
+.bottom-spacer {
+  height: 500px;
 }
 
 
@@ -501,11 +510,17 @@ tbody tr:hover {
 .modal-header {
   color: #ffffff;
   background-color: #ff0066;
-  border-bottom: 0px solid #ff0066;
+  border-bottom: 1px solid #ff0066;
+}
+
+.modal-body {
+  color: #555555;
+  background-color: #aaaaaa;
 }
 
 .modal-footer {
-  background-color: #bbbbbb;
-  border-top: 1px solid #bbbbbb;
+  background-color: #ffffff;
+  border-top: 1px solid #ffffff;
+  margin-top: 0px;
 }
 
