--- a/tasks/templates/task_add.html
+++ b/tasks/templates/task_add.html
@@ -1,39 +1,41 @@
 {% extends "app_base.html" %}
 {% load setclass %}
 
-
 {% block content %}
 
-<div class="page-header">
-  <h1>Add a new task</h1>
-</div>
-
-<div class="col-lg-6">
-  <div class="well"> 
-    <form role="form" id="addtaskform" action="" method="POST">
-    {% csrf_token %}
-      {% for field in form %}
-        <div class="form-group">
-          {{ field.label_tag }}
-          {% ifequal field.label "Deadline" %}
-            <br>
-            {{ field|setclass:"form-control datepicker" }}
-          {% else %}
-            {{ field|setclass:"form-control" }}
+<div class="col-sm-10 col-md-8 col-lg-6 no-toolbar">
+    
+  <div class="panel panel-default">
+    <div class="panel-heading">
+	  <i class="fa fa-plus-circle fa-fw fa-lg"></i>&nbsp;
+	  Add new task
+    </div>
+    <div class="panel-body">
+      <form role="form" id="addtaskform" action="" method="POST">
+      {% csrf_token %}
+        {% for field in form %}
+          <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
             {{ field.errors }}
-          {% endifequal %}
+          </div>
+        {% endfor %}
+        <div class="pull-right">
+          <a href={% url 'task-list' %} type="button" class="btn btn-default" >
+            <i class="fa fa-minus-circle fa-lg"></i>&nbsp;
+            Cancel
+          </a>
+          <button type="submit" class="btn btn-primary">
+            <i class="fa fa-check-circle fa-lg"></i>&nbsp;
+            Save task
+          </button>
         </div>
-      {% endfor %}
-      <button type="submit" class="btn btn-primary">Add task</button>
-      <a href={% url 'task-list' %} type="button" class="btn btn-default" >
-        Cancel
-      </a>
-    </form>
-  </div>
-</div>
+      </form>
+    </div><!-- /.panel-body -->
+  </div><!-- /.panel -->  
+</div><!-- /.col -->
 
 {% endblock content %}
-
 
 {% block extrajs %}
 
@@ -43,12 +45,15 @@
       rules: {
         description: {
           required: true,
-          maxlength: 200,
+          maxlength: 80,
         },
         participant: "required",
         deadline: {
           required: true,
           date: true,
+        },
+        notes: {
+          maxlength: 300,
         },
       },
       messages: {
