--- a/tasks/templates/task_edit.html
+++ b/tasks/templates/task_edit.html
@@ -1,48 +1,49 @@
 {% extends "app_base.html" %}
 {% load setclass %}
 
-
 {% block content %}
 
-<div class="page-header">
-  <h1>Edit this task</h1>
-</div>
- 
-<div class="well"> 
-  <form id="edittaskform" role="form" action="" method="POST">
-    {% csrf_token %}
-    {% for field in form %}
-      <div class="form-group">
-        {% if field.label == "Deadline" %}
-          {{ field.label_tag }}
-          {{ field|setclass:"form-control datepicker" }}
-          {{ field.errors }}
-       {% elif field.label == "Completion date" %}
-          <div id="completion_date">
+<div class="col-sm-10 col-md-8 col-lg-6 no-toolbar">
+      
+  <div class="panel panel-default">
+    <div class="panel-heading">
+	  <i class="fa fa-edit fa-fw fa-lg"></i>&nbsp;
+	  Edit task
+    </div>
+    <div class="panel-body">
+      <form role="form" id="edittaskform" action="" method="POST">
+      {% csrf_token %}
+        {% for field in form %}
+          {% if field.label == "Date completed" %}
+            <div class="form-group" id="completion_date">
+          {% else %}
+            <div class="form-group">
+          {% endif %}
             {{ field.label_tag }}
-            {{ field|setclass:"form-control datepicker" }}        
+            {{ field }}
             {{ field.errors }}
           </div>
-        {% else %}
-          {{ field.label_tag }}
-          {{ field|setclass:"form-control" }}
-          {{ field.errors }}
-        {% endif %}
-      </div>
-    {% endfor %}
-    <button type="submit" class="btn btn-primary" name="button" value="submit">
-      Save changes
-    </button>
-  </form>
-  <a href={% url 'task-list' %} class="btn btn-default">
-    Cancel
-  </a>
-  <button class="btn btn-default delete-button"
-    name="Task: {{ form.description.value }}"
-    id="delete_task">
-      Delete task
-  </button>
-</div>
+        {% endfor %}
+        <div class="pull-right">
+          <button class="btn btn-default delete-button"
+            name="Task: {{ form.description.value }}" id="delete_task">
+              <i class="fa fa-times-circle fa-lg"></i>&nbsp;
+              Delete task
+          </button>
+          <a href={% url 'task-list' %} type="button" class="btn btn-default" >
+            <i class="fa fa-minus-circle fa-lg"></i>&nbsp;
+            Cancel
+          </a>
+          <button type="submit" class="btn btn-primary" name="button" 
+            value="save_task">
+              <i class="fa fa-check-circle fa-lg"></i>&nbsp;
+              Save changes
+          </button>
+        </div><!-- /.pull-right -->
+      </form>
+    </div><!-- /.panel-body -->
+  </div><!-- /.panel -->  
+</div><!-- /.col -->
 
 {% endblock content %}
 
@@ -52,7 +53,7 @@
 
   $(function () {
     $("#id_status").change(function () {
-      if ($("#id_status").val() == "Complete") {
+      if ($("#id_status").val() == "Completed") {
         $("#completion_date").show();
         $("#id_completion_date").datepicker("setDate", new Date());
       } else {
@@ -67,19 +68,22 @@
       rules: {
         description: {
           required: true,
-          maxlength: 200,
+          maxlength: 80,
         },
         participant: "required",
-        status: "required",
         deadline: {
           required: true,
           date: true,
         },
+        status: "required",
         completion_date: {
           required: function(element) {
             return $("#id_status").val() == "Complete";
           },
           date: true,
+        },
+        notes: {
+          maxlength: 300,
         },
       },
       messages: {
@@ -87,11 +91,11 @@
           required: "Please enter a description of the task",
         },
         participant: "Please select the person responsible for the task",
-        status: "Please select a status for the task",
         deadline: {
           required: "Please enter a deadline for the task",
           date: "Please select a valid date from the calendar",
         },
+        status: "Please select a status for the task",
         completion_date: {
           required: "A completion date is required for for a complete task",
           date: "Please select a valid date from the calendar",
@@ -101,6 +105,5 @@
   })
 
 </script>
-
 
 {% endblock extrajs %}
