--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -18,7 +18,7 @@
       </a>
       {% if top_overdue_tasks %}
       <div class="table-dashboard">
-      <table class="table table-hover">
+      <table class="table table-hover task-table">
         <thead>
           <tr>
             {% for heading in task_headings %}
@@ -152,7 +152,7 @@
     </a>
     {% if top_pending_tasks %}
     <div class="table-dashboard">
-      <table class="table table-hover">
+      <table class="table table-hover task-table">
         <thead>
           <tr>
             {% for heading in task_headings %}
