--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -418,7 +418,7 @@ body {
   background-color: #aaaaaa;
 }
 
-/* Set up meeting summary tables on dashboard */
+/* Set up meeting tables on dashboard */
 
 .meeting-table {
   margin: -15px -15px -15px -15px;
@@ -434,6 +434,19 @@ body {
   background-color: #aaaaaa;
 }
 
+/* Set up task tables on dashboard */
+
+.task-table {
+  margin-bottom: 0;
+}
+
+.task-table td:nth-child(0n+2) {
+  width: 110px;
+}
+
+.task-table tr:last-child td {
+  border-bottom: 1px solid #dddddd;
+}
 
 /* Set cursor to pointer for all tables except meeting lists */
 
