--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -224,7 +224,7 @@
                 {% endifequal %} 
                   <a href={% url 'decision-list' %}>
                     <i class="fa fa-th fa-fw"></i>&nbsp;
-                      View all decisions
+                      View decisions
                   </a>
                 </li>
               </ul>
