--- a/decisions/templates/decision_list.html
+++ b/decisions/templates/decision_list.html
@@ -1,35 +1,70 @@
 {% extends "app_base.html" %}
+{% load setclass %}
 
 {% block content %}
 
+  <!-- TABLE
+  ================================================== -->
 
-<div class="page-header">
-	<h1>{{ page_heading }}</h1>
-</div>
-            
-<div class="panel panel-primary">
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				{% for table_heading in table_headings %}
-					<th>{{ table_heading }}</th>
-				{% endfor%}
-			</tr>
-		</thead>
-		<tbody> 
-			{% for decision in decisions %}
-				<tr id={{ decision.id }} onclick="document.location='{% url 'minutes-edit' decision.meeting_id %}';">
-					<td>{{ decision.description }}</td>
-					<td>{{ decision.item }}</td>
-				</tr>
-			{% empty %}
-				<tr>
-					<td>There are no decisions yet.</td>
-				</tr>
-			{% endfor%}
-		</tbody>
-	</table>
-</div>
+  <div class="col-sm-9 with-toolbar">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <i class="fa fa-th fa-align-justify fa-fw fa-lg"></i>&nbsp;
+        All decisions
+       </div>
+      <table class="table table-hover" id="table_manage_decisions">
+        <thead>
+          <tr>
+            {% for table_heading in table_headings %}
+              <th>{{ table_heading }}</th>
+            {% endfor%}
+          </tr>
+        </thead>
+        <tbody> 
+          {% for decision in decisions %}
+            <tr id={{ decision.id }} onclick="document.location='{% url 'minutes-view' decision.meeting_id %}';">
+              <td>{{ decision.meeting.meeting_no }}</td>
+              <td>{{ decision.item.item_no }}</td>
+              <td>{{ decision.description }}</td>
+            </tr>
+          {% empty %}
+            <tr>
+              <td>There are no decisions yet.</td><td></td><td></td>
+            </tr>
+          {% endfor%}
+        </tbody>
+      </table>
+    </div><!-- /.panel -->
+  </div><!-- /.col -->
 
-		
+  <!-- TOOLBAR
+  ================================================== -->
+
+  <div class="col-sm-2 toolbar">
+    <ul class="nav nav-toolbar">
+      <li class="toolbar-heading">
+        <h1><i class="fa fa-th fa-fw fa-lg"></i>&nbsp;
+          View decisions</h1>
+      </li>
+      <li class="toolbar-subheading">
+        <h2><i class="fa fa-search fa-fw"></i>&nbsp;
+          Search options</h2>
+      </li>
+      <li>
+        <a href="#">
+          Coming soon
+        </a>
+      </li>
+      <li class="toolbar-subheading">
+        <h2><i class="fa fa-filter fa-fw"></i>&nbsp;
+          Filter options</h2>
+      </li>
+      <li>
+        <a href="#">
+          Coming soon
+        </a>
+      </li>
+    </ul>
+  </div><!-- /.col -->
+
 {% endblock %}
