Overhauled all participants views

--- a/participants/templates/participant_add.html
+++ b/participants/templates/participant_add.html
@@ -3,32 +3,39 @@
 
 {% block content %}
 
-<div class="page-header">
-  <h1>{{ page_heading }}</h1>
-</div>
+<div class="col-sm-10 col-md-8 col-lg-6 no-toolbar">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+	  <i class="fa fa-plus-circle fa-fw fa-lg"></i>&nbsp;
+	  New participant
+    </div>
+    <div class="panel-body">
+      <form role="form" id="addparticipantform" action="" method="POST">
+      {% csrf_token %}
+        {% for field in form %}
+          <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
+            {{ field.errors }}
+          </div>
+        {% endfor %}
+        <div class="pull-right">
+          <a href={% url 'participant-list' %} type="button"
+            class="btn btn-default" >
+              <i class="fa fa-minus-circle fa-lg"></i>&nbsp;
+              Cancel
+          </a>
+          <button type="submit" class="btn btn-primary">
+            <i class="fa fa-check-circle fa-lg"></i>&nbsp;
+            Save participant
+          </button>
+        </div>
+      </form>
+    </div><!-- /.panel-body -->
+  </div><!-- /.panel -->  
+</div><!-- /.col -->
 
-
-<div class="well"> 
-  <form id="addparticipantform" action="" method="POST">
-    {% csrf_token %}
-    {% for field in form %}
-      <div class="form-group">
-        {{ field.label_tag }}
-        {{ field|setclass:"form-control" }}
-        {{ field.errors }}
-      </div>
-    {% endfor %}
-    <button type="submit" class="btn btn-primary">
-      Add participant
-    </button>
-    <a href={% url 'participant-list' %} type="button" class="btn btn-default">
-      Cancel
-    </a>
-  </form>
-</div>
-	
 {% endblock content %}
-
 
 {% block extrajs %}
 
@@ -38,37 +45,39 @@
       rules: {
         first_name: {
           required: true,
-          maxlength: 100,
+          maxlength: 80,
         },
         last_name: {
-          maxlength: 100,
+          maxlength: 80,
         },
         email: {
+          required: true,
           email: true,
         },
         phone: {
           maxlength: 20,
         },
         notes: {
-          maxlength: 1000,
+          maxlength: 300,
         },        
       },
       messages: {
         first_name: {
           required: "Please enter this participant's first name",
-          maxlength: "The maximum length of this field is 100 characters",
+          maxlength: "The maximum length of this field is 80 characters",
         },
         last_name: {
-          maxlength: "The maximum length of this field is 100 characters",
+          maxlength: "The maximum length of this field is 80 characters",
         },
         email: {
+          required: "Please enter this participant's email address",
           email: "Please enter a valid email address",
         },
         phone: {
           maxlength: "The maximum length of this field is 20 characters",
         },
         notes: {
-          maxlength: "The maximum length of this field is 1000 characters",
+          maxlength: "The maximum length of this field is 300 characters",
         },
       },
     });
