--- a/participants/templates/participant_list.html
+++ b/participants/templates/participant_list.html
@@ -1,53 +1,107 @@
 {% extends "app_base.html" %}
+{% load setclass %}
 
 {% block content %}
 
+  <!-- TABLE
+  ================================================== -->
 
-<div class="page-header">
-	<h1>{{ page_heading }}</h1>
-</div>
+  <div class="col-sm-9 with-toolbar">      
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        {% if selection == "active" %}
+          <i class="fa fa-star fa-fw fa-lg"></i>&nbsp;
+          Active participants
+        {% elif selection == "inactive" %}
+          <i class="fa fa-star-half-o fa-fw fa-lg"></i>&nbsp;
+          Inactive participants
+        {% elif selection == "former" %}
+          <i class="fa fa-star-o fa-fw fa-lg"></i>&nbsp;
+          Former participants
+        {% endif %}
+      </div>
+      {% if participants %}
+        <table class="table table-hover" id="table_manage_participants">
+          <thead>
+            <tr>
+              {% for table_heading in table_headings %}
+                <th>{{ table_heading }}</th>
+              {% endfor%}
+            </tr>
+          </thead>
+          <tbody> 
+            {% for participant in participants %}
+              <tr id={{ participant.id }}
+                onclick="document.location='{% url 'participant-view' participant.id %}';">
+                  <td>{{ participant.first_name }}</td>
+                  <td>{{ participant.last_name }}</td>
+                  {% if participant.reminders %}
+                    <td>Yes</td>
+                  {% else %}
+                    <td>No</td>
+                  {% endif %}
+              </tr>
+            {% endfor%}
+          </tbody>
+        </table>
+      {% else %}
+        <div class="panel-body text-center">
+          Your group has no {{ selection }} participants.
+        </div>
+      {% endif%}
+    </div><!-- /.panel -->
+  </div><!-- /.col -->
 
-<form role="form" action="" method="POST">
-  {% csrf_token %}
-  <ul class="nav nav-pills">
-    <li class="active"><button type="submit" class="btn btn-primary"
-      value="first_name" name="button">Sort by first name</button></li>
-    <li><button type="submit" class="btn btn-primary" value="last_name"
-      name="button">Sort by last name</button></li>
-    <li class="active"><button type="submit" class="btn btn-primary"
-      value="newest_first" name="button">Sort by newest first</button></li>
-  </ul>
-</form>
+  <!-- TOOLBAR
+  ================================================== -->
 
-<br/>
-            
-<div class="panel panel-primary">
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				{% for table_heading in table_headings %}
-					<th>{{ table_heading }}</th>
-				{% endfor%}
-			</tr>
-		</thead>
-		<tbody> 
-			{% for participant in participants %}
-				<tr id={{ participant.id }} onclick="document.location='{% url 'participant-view' participant.id %}';">
-					<td>{{ participant.first_name }}</td>
-					<td>{{ participant.last_name }}</td>
-					<td>{{ participant.email }}</td>
-					<td>{{ participant.phone }}</td>
-				</tr>
-			{% empty %}
-				<tr>
-					<td>There are no participants yet.</td>
-				</tr>
-			{% endfor%}
-		</tbody>
-	</table>
-</div>
-
-<a href={% url 'participant-add' %}><button type="button" class="btn btn-primary" data-toggle="button">Add participant</button></a>
-
+  <div class="col-sm-2 toolbar">
+    <form role="form" action="" method="POST">
+      {% csrf_token %}      
+      <ul class="nav nav-toolbar">
+        <li class="toolbar-heading">
+          <h1><i class="fa fa-pencil fa-fw fa-lg"></i>&nbsp;
+            Manage participants</h1>
+        </li>
+        <li class="toolbar-subheading">
+          <h2><i class="fa fa-filter fa-fw"></i>&nbsp;
+            Filter options</h2>
+        </li>
+        {% if selection == "active" %}
+          <li class="active">
+        {% else %}
+          <li>
+        {% endif %}
+          <button type="submit" class="btn btn-toolbar"
+            value="active" name="button">
+              <i class="fa fa-star fa-fw"></i>&nbsp;
+              Active
+          </button>
+        </li>
+        {% if selection == "inactive" %}
+          <li class="active">
+        {% else %}
+          <li>
+        {% endif %}
+          <button type="submit" class="btn btn-toolbar"
+            value="inactive" name="button">
+              <i class="fa fa-star-half-o fa-fw"></i>&nbsp;
+              Inactive
+          </button>
+        </li>
+        {% if selection == "former" %}
+          <li class="active">
+        {% else %}
+          <li>
+        {% endif %}
+          <button type="submit" class="btn btn-toolbar"
+            value="former" name="button">
+              <i class="fa fa-star-o fa-fw"></i>&nbsp;
+              Former
+          </button>
+        </li>
+      </ul>
+    </form>
+  </div><!-- /.col -->
 		
-{% endblock %}
+{% endblock content %}
