--- a/participants/templates/participant_view.html
+++ b/participants/templates/participant_view.html
@@ -3,42 +3,89 @@
 
 {% block content %}
 
+<div class="col-sm-10 col-md-8 col-lg-6 no-toolbar">
 
-<div class="page-header">
-	<h1>{{ page_heading }}</h1>
-</div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+	  <i class="fa fa-user fa-fw fa-lg"></i>&nbsp;
+	  {{ participant.first_name }}'s details
+    </div>
+    <table class="table" id="view_participant_details">
+      <tbody> 
+        <tr>
+          <td>First name</td>
+          <td>{{ participant.first_name }}</td>
+        </tr>
+        <tr>
+          <td>Last name</td>
+          <td>{{ participant.last_name }}</td>
+        </tr>
+        <tr>
+          <td>Email address</td>
+          <td>{{ participant.email }}</td>
+        </tr>
+        <tr>
+          <td>Phone number</td>
+          <td>{{ participant.phone }}</td>
+        </tr>
+        <tr>
+          <td>Status</td>
+          <td>{{ participant.status }}</td>
+        </tr>
+        <tr>
+          <td>Email reminders on</td>
+            {% if participant.reminders %}
+              <td>Yes</td>
+            {% else %}
+              <td>No</td>
+            {% endif %}
+        </tr>
+        <tr>
+          <td>Notes</td>
+          <td>{{ participant.notes }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="panel-footer text-right">
+        <a href={% url 'participant-edit' participant.id %}
+          class="btn btn-primary">
+	        <i class="fa fa-edit fa-fw fa-lg"></i>&nbsp;
+            Edit {{ participant.first_name }}'s details
+        </a>
+    </div><!-- /.panel-footer -->
+  </div><!-- /.panel -->  
 
+  <div class="panel panel-default">
+    <div class="panel-heading">
+	  <i class="fa fa-star-o fa-fw fa-lg"></i>&nbsp;
+	  {{ participant.first_name }}'s incomplete tasks
+    </div>
+    {% if incomplete_tasks %}
+      <table class="table table-hover" id="view_participant_tasks">
+        <thead>
+          <tr>
+            {% for heading in table_headings %}
+              <th>{{ heading }}</th>
+            {% endfor%}
+          </tr>
+        </thead>
+        <tbody> 
+          {% for task in incomplete_tasks %}
+            <tr id={{ task.id }} 
+              onclick="document.location='{% url 'task-edit' task.id %}';">
+                <td>{{ task.description }}</td>
+                <td>{{ task.deadline }}</td>
+            </tr>
+          {% endfor%}
+        </tbody>
+      </table>
+    {% else %}
+      <div class="panel-body text-center">
+        {{ participant.first_name }} has no incomplete tasks.
+      </div>
+    {% endif%}
+  </div><!-- /.panel -->  
 
-<h1><small>{{ participant.first_name }}'s details</small></h1>
-
-<div class="well">
-	<p><strong>Email:</strong> &nbsp &nbsp &nbsp {{ participant.email }}</p>
-	<p><strong>Phone:</strong> &nbsp &nbsp {{ participant.phone }}</p>
-	<a href={% url 'participant-edit' participant.id %}><button type="button" class="btn btn-primary">Edit {{ participant.first_name }}'s details</button></a>
-</div>
-
-
-<h1><small>{{ participant.first_name }}'s tasks</small></h1>
-
-<div class="panel panel-primary">
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				{% for table_heading in table_headings %}
-					<th>{{ table_heading }}</th>
-				{% endfor%}
-			</tr>
-		</thead>
-		<tbody> 
-			{% for task in tasks %}
-				<tr id={{ participant.id }} onclick="document.location='{% url 'task-edit' task.id %}';">
-					<td>{{ task.description }}</td>
-					<td>{{ task.deadline }}</td>
-					<td>{{ task.status }}</td>
-				</tr>
-			{% endfor%}
-		</tbody>
-	</table>
-</div>
+</div><!-- /.col -->
 
 {% endblock %}
