Changes to sidebar menu labeling

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -217,7 +217,7 @@
                 <i class="fa fa-angle-down pull-right"></i>
               </a>
               <ul class="nav nav-second-level">
-                {% ifequal menu.child 'all_decisions' %}
+                {% ifequal menu.child 'view_decisions' %}
                   <li class="active">
                 {% else %}
                   <li>
@@ -251,7 +251,7 @@
                       New participant
                   </a>
                 </li>
-                {% ifequal menu.child 'all_participants' %}
+                {% ifequal menu.child 'manage_participants' %}
                   <li class="active">
                 {% else %}
                   <li>
